fixed horizontal scroll of iframe

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,6 +45,7 @@ body {
 #preview > iframe {
 	width: 100%;
 	height: 100%;
+	border: 0;
 }
 
 #splitter {
